k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-interview-api
  namespace: mock-interview
  labels:
    app: mock-interview-api
  annotations:
    cloud.google.com/backend-config: '{"default":"mock-interview-api-backend-config"}'

spec:
  type: ClusterIP

  selector:
    app: mock-interview-api

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
